fdo#81956 : Rendering of vml group shape was wrong.

- Problem : In Z-Order, VML group shape was above textbox.
              But it was rendered behind textbox.
  - "OPAQUE" property for textbox was true by default.
  - If Z-Order value is there then this value should be false (for VML shapes).
  - Rendering of shapes in z-ordere should be as per their index in z-order.

Change-Id: I0a2082d2dcfdd98a4f6b3d53429415a90e65eaed